sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

	var taille:Int = getNombreValeurs();
	var modif:Boolean = false;
	var j:Int = 0;

	do
	{
		bool = false;
		for (j <- 0 to taille -2)
		{
			if (!plusPetit(j, j + 1)) 
				{
					echange(j, j + 1);
					modif = true;
				}
		}
	} while(modif);
}
